--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 googleapis-common-protos==1.52.0
 grpcio==1.28.1
+gunicorn==19.9.0
 h5py==2.10.0
 httplib2==0.18.1
 idna==2.9
